# redactorator

./: .gitignore  LICENSE  README.md  pyproject.toml  redact.py
patterns/: __init__.py  base.py  dob.py  ids.py  phone.py  ssn.py
redactorator/: __init__.py
redactorator/patterns/: __init__.py  base.py  ids.py  phone.py  ssn.py
tests/: test_dob.py  test_ids.py  test_phone.py  test_ssn.py  test_utils.py
