[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redactorator"
version = "0.0.0"
description = "Human-auditable regex helpers for identifying and redacting labeled sensitive data."
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Redactorator contributors" } ]
